[gd_scene load_steps=10 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]
[ext_resource path="res://login.png" type="Texture" id=2]
[ext_resource path="res://VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=1]

_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=4]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=12]


[sub_resource type="DynamicFontData" id=10]

font_path = "res://VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=11]

size = 13
use_mipmaps = false
use_filter = false
font_data = SubResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 0
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Font/fallback" ]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Panel" type="TextureRect" parent="." index="0"]

modulate = Color( 0.996094, 0.996094, 0.996094, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 1.0
margin_right = 1025.0
margin_bottom = 603.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 1 )
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Material", "Visibility" ]

<<<<<<< HEAD
[node name="Button" type="Button" parent="Panel" index="0"]
=======
[node name="login" type="Label" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 193.0
margin_top = 163.0
margin_right = 233.0
margin_bottom = 177.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Login"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="login_button" type="Button" parent="Panel/login" index="0"]
>>>>>>> 3dcae6d7b5f1376b8808de493f3243cd03d4e480

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 411.0
margin_right = 245.0
margin_bottom = 490.0
rect_rotation = -0.0170187
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Login"
flat = false
align = 1
_sections_unfolded = [ "Material", "custom_fonts" ]

[node name="username_input" type="TextEdit" parent="Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 212.0
margin_top = 316.0
margin_right = 377.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 12 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = true
caret_blink_speed = 0.3
caret_moving_by_right_click = true
_sections_unfolded = [ "Anchor", "Caret", "Focus", "Grow Direction", "Rect", "Size Flags", "Theme", "custom_fonts", "custom_icons" ]

[node name="password_input" type="LineEdit" parent="Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 212.0
margin_top = 338.0
margin_right = 377.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 11 )
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Placeholder" ]

<<<<<<< HEAD
[node name="CheckBox" type="CheckBox" parent="Panel" index="3"]
=======
[node name="register_box" type="CheckBox" parent="Panel/register_user" index="0"]
>>>>>>> 3dcae6d7b5f1376b8808de493f3243cd03d4e480

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 384.0
margin_right = 402.0
margin_bottom = 408.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.0392157, 0, 0.74902, 1 )
custom_colors/font_color = Color( 0.0392157, 0, 0.74902, 1 )
custom_colors/font_color_hover = Color( 0.0392157, 0, 0.74902, 1 )
custom_colors/font_color_pressed = Color( 0.0392157, 0, 0.74902, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="HTTPRequest" type="HTTPRequest" parent="." index="1"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

<<<<<<< HEAD
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
=======
[node name="error_text" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 199.0
margin_top = 481.0
margin_right = 769.0
margin_bottom = 536.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "This is the error text label"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[connection signal="pressed" from="Panel/login/login_button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Panel/login/login_button" to="." method="_on_LoginButton_pressed"]
>>>>>>> 3dcae6d7b5f1376b8808de493f3243cd03d4e480

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]


